feature: cv downloading and new text adjustments

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,8 +6,11 @@ import { experience } from "../constants/experience";
 <section class="sectionExperience" id="ss">
   <h1>Education <span class="textBlue"> & </span>Experience.</h1>
   <p class="sectionExperienceDescription">
-    Where study and experience are enhanced. The places where the mind is
-    formed.
+    Where study and experience are <span class="hightlightExperienceDescription"
+      >enhanced</span
+    >. The places where the <span class="hightlightExperienceDescription"
+      >mind
+    </span> is formed.
   </p>
   <main class="wrapperExperience">
     {
