--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,6 +9,9 @@ import "../css/Navbar.css";
     <!-- <a class="topBar-anker"
                 href="#sk">Skills</a> -->
 
+    <a class="btnCV" href="/assets/cv-english.pdf" download="YourCV.pdf"
+      >Download CV
+    </a>
     <a class="topBar-anker" href="#sp">Projects</a>
 
     <a class="topBar-anker" href="#ss">Experience</a>
