--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -107,7 +107,7 @@ import Star from "./icons/Star.astro";
     <aside class="sideRightBlur"></aside>
   </section>
 
-  <p>UI's built in Java with Swing and AWT</p>
+  <p style="padding-top: 4rem;">UI's built in Java with Swing and AWT</p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
