--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,5 +21,5 @@ import "../css/Footer.css";
       <img src="./footer/icon_footer_facebook.svg" alt="facebook logo" />
     </a>
   </div>
-  <p>2024, Valencia Arcega</p>
+  <p>2024. Valencia Arcega</p>
 </footer>
