--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -19,6 +19,10 @@
 	color: #6b6b6b;
 }
 
+.hightlightExperienceDescription {
+	color: var(--frText);
+}
+
 .wrapperExperience {
 	height: fit-content;
 	width: 80%;
