--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -45,3 +45,19 @@
 	border: none;
 	background: none;
 }
+
+.btnCV {
+	border: none;
+	outline: none;
+	background: none;
+	text-decoration: none;
+	font-size: 1rem;
+	color: gray;
+
+}
+
+.btnCV:hover {
+	cursor: pointer;
+	text-decoration: underline;
+	color: var(--frText) !important;
+}
