feature: new certificates modal and new logic render components

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,10 @@ import "../css/Navbar.css";
     <!-- <a class="topBar-anker"
                 href="#sk">Skills</a> -->
 
-    <a class="btnCV" href="/assets/cv-english.pdf" download="YourCV.pdf"
+    <a
+      class="btnCV"
+      href="/assets/cv-english.pdf"
+      download="ValenciaArcegaCVEnglishVersion.pdf"
       >Download CV
     </a>
     <a class="topBar-anker" href="#sp">Projects</a>
