--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,6 +8,11 @@ import Star from "./icons/Star.astro";
     <h1 class="projects-h1">
       My personal <span class="textBlue-onBlack">projects</span>.
     </h1>
+
+    <section class="wrapperGradientTitle">
+      <h1>Projects</h1>
+    </section>
+
     <article class="cardKnowledges">
       <div class="cardKnowledgesBorder"></div>
       <!-- <div class="cardKnowledgesBg"></div> -->
