--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Experience from "../components/Experience.astro";
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import Topbar from "../components/Topbar.astro";
+import Certificates from "../components/Certificates.astro";
 ---
 
 <html lang="en">
@@ -40,6 +41,7 @@ import Topbar from "../components/Topbar.astro";
     <Footer />
     <Navbar />
     <Topbar />
+    <Certificates />
 
     <script src="../functions/appearance.js"></script>
   </body>
