--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,9 +5,9 @@ import Star from "./icons/Star.astro";
 
 <section class="container-knowledgesCards" id="sp">
   <section class="sectionKnowledges">
-    <h1 class="projects-h1">
+    <!--  <h1 class="projects-h1">
       My personal <span class="textBlue-onBlack">projects</span>.
-    </h1>
+    </h1> -->
 
     <section class="wrapperGradientTitle">
       <h1>Projects</h1>
