--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -44,9 +44,7 @@ import "../css/Welcome.css";
       </h1>
       <p class="welcome-text-p">
         <span class="animated-text"> Software engineer</span> & frontend developer,
-        that loves to learn and build gorgeous <span class="textBlue"
-          >software</span
-        >
+        that loves to build gorgeous <span class="textBlue">software</span>
         experiences<span class="textBlue">.</span>
       </p>
     </div>
