refactor: main projects anker had been redesign

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,6 @@
 ---
 import "../css/Projects.css";
+import Rocket from "./icons/Rocket.astro";
 import Star from "./icons/Star.astro";
 ---
 
@@ -24,8 +25,13 @@ import Star from "./icons/Star.astro";
         </p>
 
         <footer class="wrapperBtnsProjectMain">
-          <a target="_blank" href="https://valenciaarcega.github.io/fare/"
-            >Discover Fare</a
+          <a
+            class="ankerDiscover"
+            target="_blank"
+            href="https://valenciaarcega.github.io/fare/"
+          >
+            <Rocket />
+            Discover Fare</a
           >
           <a target="_blank" href="https://github.com/ValenciaArcega/fare"
             >Give <Star /> in Github</a
@@ -45,8 +51,12 @@ import Star from "./icons/Star.astro";
         </p>
 
         <footer class="wrapperBtnsProjectMain">
-          <a target="_blank" href="https://valenciaarcega.github.io/tolescro/"
-            >Discover Tolescro</a
+          <a
+            class="ankerDiscover"
+            target="_blank"
+            href="https://valenciaarcega.github.io/tolescro/"
+          >
+            <Rocket />Discover Tolescro</a
           >
           <a target="_blank" href="https://github.com/ValenciaArcega/tolescro"
             >Give <Star />in Github</a
