fix: spacing on section projects and some text adjustments

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -10,7 +10,7 @@ import { experience } from "../constants/experience";
       >enhanced</span
     >. The places where the <span class="hightlightExperienceDescription"
       >mind
-    </span> is formed.
+    </span> is <span style="text-decoration: underline;">formed</span>.
   </p>
   <main class="wrapperExperience">
     {
