--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import "../css/Footer.css";
 
 <!-- Footer -->
 <footer class="footerApp">
-  <div class="wrapper-icons-social">
+  <main>
     <a
       target="_blank"
       href="https://www.linkedin.com/in/luis-angel-valencia-arcega-4827b9239"
@@ -14,12 +14,12 @@ import "../css/Footer.css";
     <a target="_blank" href="https://github.com/ValenciaArcega">
       <img src="./footer/icon_footer_github.svg" alt="gtihub logo" />
     </a>
-    <a target="_blank" href="https://www.instagram.com/valencia.arcega/">
+    <!-- <a target="_blank" href="https://www.instagram.com/valencia.arcega/">
       <img src="./footer/icon_footer_instagram.svg" alt="instagram logo" />
     </a>
     <a target="_blank" href="https://www.facebook.com/valencia.arcega">
       <img src="./footer/icon_footer_facebook.svg" alt="facebook logo" />
-    </a>
-  </div>
+    </a> -->
+  </main>
   <p>2024. Valencia Arcega</p>
 </footer>
