--- a/src/components/Knowledges.astro
+++ b/src/components/Knowledges.astro
@@ -18,7 +18,11 @@ import {
   </div>
 
   <section class="wrapperSkills">
-    <h1 class="knowledges-h1">Some of my main <span>technologies</span>.</h1>
+    <h1 class="knowledges-h1">
+      Some of my main <span style="text-decoration: underline"
+        >technologies</span
+      >.
+    </h1>
 
     <main class="skills">
       <article class="skill">
