--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -70,7 +70,7 @@ import Star from "./icons/Star.astro";
   <h2 class="projects-h2">
     The <span class="textBlue-onBlack">big ones</span>.
   </h2>
-  <p>UI's built with React and vanilla CSS</p>
+  <p>UI's built with React and vanilla CSS.</p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
@@ -122,7 +122,7 @@ import Star from "./icons/Star.astro";
     <aside class="sideRightBlur"></aside>
   </section>
 
-  <p style="padding-top: 4rem;">UI's built in Java with Swing and AWT</p>
+  <p style="padding-top: 4rem;">UI's built in Java with Swing and AWT.</p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
