feature: new cv actions for desktop bar and some new icons

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -46,8 +46,7 @@ import Star from "./icons/Star.astro";
           width="64"
         />
         <p>
-          <span>Tolescro</span> it is a website to scroll and learn English with
-          cards.
+          <span>Tolescro</span> it is a website to learn English with cards.
         </p>
 
         <footer class="wrapperBtnsProjectMain">
