--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,20 +1,34 @@
 ---
 import "../css/Navbar.css";
+import FlagMX from "./icons/FlagMX.astro";
+import FlagUS from "./icons/FlagUS.astro";
 ---
 
 <nav class="navBar-desktop">
   <img src="./favicon.webp" alt="navigation bar icon" />
 
   <section class="navBar-desktop-options">
-    <!-- <a class="topBar-anker"
-                href="#sk">Skills</a> -->
+    <input type="checkbox" id="toggleBannerCV" title="hey" />
+    <label for="toggleBannerCV" class="btnDownloadCV">Download CV</label>
 
-    <a
-      class="btnCV"
-      href="/assets/cv-english.pdf"
-      download="ValenciaArcegaCVEnglishVersion.pdf"
-      >Download CV
-    </a>
+    <article class="wrapperModalCV">
+      <a
+        class="btnCV"
+        href="/assets/valenciaarcega-cv-es.pdf"
+        download="valenciaarcega-cv-es.pdf"
+      >
+        <FlagMX />
+        Versión en Español
+      </a>
+      <a
+        class="btnCV"
+        href="/assets/valenciaarcega-cv-en.pdf"
+        download="valenciaarcega-cv-en.pdf"
+      >
+        <FlagUS />
+        English version
+      </a>
+    </article>
     <a class="topBar-anker" href="#sp">Projects</a>
 
     <a class="topBar-anker" href="#ss">Experience</a>
@@ -36,3 +50,49 @@ import "../css/Navbar.css";
     </button>
   </section>
 </nav>
+
+<style>
+  .btnDownloadCV {
+    border: none;
+    outline: none;
+    background: none;
+    color: var(--frText);
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+  }
+  .wrapperModalCV {
+    height: fit-content;
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: var(--bgWhite);
+    position: absolute;
+    top: 3.3rem;
+    right: 20%;
+    z-index: 5;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+  }
+
+  .wrapperModalCV a {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+  }
+  #toggleBannerCV {
+    display: none;
+  }
+  #toggleBannerCV:checked ~ .wrapperModalCV {
+    display: none;
+  }
+</style>
