--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Topbar from "../components/Topbar.astro";
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <title>ValenciaArcega - Portfolio</title>
+    <title>ValenciaArcega &mdash; Portfolio</title>
   </head>
   <body>
     <Welcome />
