fix: open CV section by default had been removed, also some new dinamic props on react icons

--- a/src/components/Knowledges.astro
+++ b/src/components/Knowledges.astro
@@ -27,43 +27,43 @@ import {
     <main class="skills">
       <article class="skill">
         <div>
-          <IconJavascript />
+          <IconJavascript height="72" />
           JavaScript
         </div>
 
         <div>
-          <IconTypescript />
+          <IconTypescript height="72" />
           TypeScript
         </div>
 
         <div>
-          <IconCSS />
+          <IconCSS height="72" } />
           CSS
         </div>
 
         <div>
-          <IconHTML />
+          <IconHTML height="72" />
           HTML
         </div>
       </article>
 
       <article class="skill">
         <div>
-          <IconReact />
+          <IconReact height="68" />
           React
         </div>
         <div>
-          <IconReact />
+          <IconReact height="68" />
           React Native
         </div>
 
         <div>
-          <IconGit />
+          <IconGit height="70" />
           Git
         </div>
 
         <div>
-          <IconCSharp />
+          <IconCSharp height="72" />
           C# & .NET
         </div>
       </article>
