--- a/src/css/Knowledges.css
+++ b/src/css/Knowledges.css
@@ -125,7 +125,7 @@
 .knowledges-h1 {
 	width: 90%;
 	padding-top: 2rem;
-	margin: 4rem 0 8px 0;
+	/* margin: 4rem 0 8px 0; */
 	font-size: 2.7rem;
 	letter-spacing: -1.8px;
 	line-height: 1.1;
@@ -136,4 +136,44 @@
 
 .knowledges-h1 span {
 	color: var(--mainColor);
+}
+
+.pocketCardFirstKnowledge,
+.pocketCardKnowledge,
+.pocketCardThirdKnowledge {
+	height: 4.8rem;
+	width: 4.8rem;
+	border-radius: 14px;
+	display: grid;
+	place-content: center;
+}
+
+.pocketCardKnowledge {
+	margin-top: -1.6rem;
+	z-index: 2;
+	background: var(--bgPocketCard);
+	scale: 1.1;
+	box-shadow: 0 14px 20px #0000001c;
+}
+
+.pocketCardKnowledge svg {
+	stroke: var(--frText);
+}
+
+.pocketCardFirstKnowledge {
+	position: absolute;
+	top: 0;
+	left: 3.2rem;
+	background-color: transparent;
+	border: 2px solid var(--borderPocketCard);
+	rotate: -80deg;
+}
+
+.pocketCardThirdKnowledge {
+	position: absolute;
+	top: 0;
+	right: 3.2rem;
+	background-color: transparent;
+	border: 2px solid var(--borderPocketCard);
+	rotate: 80deg;
 }
