--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -259,6 +259,52 @@
 	-webkit-background-clip: text;
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.pocketCards {
+	margin-block: 2rem;
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	position: relative;
+}
+
+.pocketCardFirst,
+.pocketCard,
+.pocketCardThird {
+	height: 4.8rem;
+	width: 4.8rem;
+	border-radius: 14px;
+	display: grid;
+	place-content: center;
+}
+
+.pocketCard {
+	margin-top: -2rem;
+	z-index: 2;
+	background: linear-gradient(0deg, #191919, #272727);
+	scale: 1.3;
+}
+
+.pocketCardFirst {
+	position: absolute;
+	top: 0;
+	left: 3.2rem;
+	background-color: transparent;
+	border: 1px solid #3a3a3a;
+	rotate: -80deg;
+}
+
+.pocketCardThird {
+	position: absolute;
+	top: 0;
+	right: 3.2rem;
+	background-color: transparent;
+	border: 1px solid #3a3a3a;
+	rotate: 80deg;
 }
 
 @container (max-width: 600px) {
