--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@
 	--bgCardExperienceBook: #ccd1ff;
 	--bgPocketCard: #fff;
 
+	--gradientConicWelcomeBubble: conic-gradient(from 120deg,
+			#ddd 10%, #fff, #ddd 99%);
+	--borderGradientConicWelcomeBubble: none;
+
 	--borderCardSkill: #ffffff4b;
 	--borderCardContact: #d9d9d9;
 	--borderPocketCard: #e7e7e7;
@@ -63,6 +67,11 @@
 	--strokeIconCardExperience: #99ff99;
 	--strokeIconCardExperienceBag: #ff617c;
 	--strokeIconCardExperienceBook: #c58eff;
+
+	--gradientConicWelcomeBubble: conic-gradient(from -45deg,
+			#171717 10%, #000, #171717 90%);
+	--borderGradientConicWelcomeBubble: conic-gradient(from 20deg,
+			transparent 60%, #6f6f6f, transparent);
 
 	--borderCardSkill: #45454553;
 	--borderCardContact: #4a4a4a;
