--- a/src/css/Welcome.css
+++ b/src/css/Welcome.css
@@ -17,6 +17,60 @@
 	align-items: center;
 }
 
+.welcomeUserImg {
+	height: 182px;
+	width: 182px;
+	border-radius: 300px;
+	background-size: contain;
+	background-image: url("./user.webp");
+	position: relative;
+}
+
+.wrapperBubbleWelcome {
+	position: absolute;
+	top: -1.8rem;
+	left: 50%;
+	translate: -50% 0;
+}
+
+.wrapperBubbleWelcome:nth-child(1) {
+	bottom: 1rem;
+	left: 0;
+	translate: -50% 0;
+	top: auto;
+}
+
+.wrapperBubbleWelcome:nth-child(3) {
+	/* translate: -50% 0; */
+	top: auto;
+	left: auto;
+	bottom: 1rem;
+	right: -2rem;
+}
+
+.bubble {
+	height: 3rem;
+	width: 3rem;
+	background-image: var(--gradientConicWelcomeBubble);
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 64px;
+	box-shadow: 5px 8px 12px 1px #0000003d;
+}
+
+.bubble::after {
+	content: '';
+	height: 100%;
+	width: 100%;
+	border-radius: 64px;
+	padding: 1px;
+	position: absolute;
+	z-index: -1;
+	background-image: var(--borderGradientConicWelcomeBubble);
+}
+
 .welcome-img {
 	height: 162px;
 	width: 162px;
@@ -27,13 +81,15 @@
 	box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.35);
 }
 
-.welcome-img:hover {
+.welcome-img:hover,
+.welcomeUserImg:hover {
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
 .wrapper-welcome-text {
 	height: 60%;
 	width: 95%;
+	margin-top: .5rem;
 	text-align: center;
 	color: var(--black12);
 }
