--- a/src/css/Welcome.css
+++ b/src/css/Welcome.css
@@ -22,7 +22,7 @@
 	width: 182px;
 	border-radius: 300px;
 	background-size: contain;
-	background-image: url("./user.webp");
+	background-image: url("../../public/user.webp");
 	position: relative;
 }
 
