--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -4,6 +4,7 @@ import {
   IconCSS,
   IconJavascript,
   IconReact,
+  IconTailwind,
   IconTypescript,
 } from "./icons/technologies";
 ---
@@ -53,7 +54,7 @@ import {
 
       <div class="wrapperBubbleWelcome">
         <div class="bubble">
-          <IconCSS height="30" />
+          <IconTailwind height="30" />
         </div>
       </div>
     </div>
@@ -64,7 +65,7 @@ import {
         I<span class="textBlue">'</span>m <span class="textBlue">Angel</span>.
       </h1>
       <p class="welcome-text-p">
-        <span class="animated-text"> Software engineer</span> & frontend developer,
+        <span class="animated-text"> Software Engineer</span> & frontend developer,
         that loves to build gorgeous <span class="textBlue">software</span>
         experiences<span class="textBlue">.</span>
       </p>
