fix: some labels and design issues had been solved

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,7 +3,7 @@ import "../css/Projects.css";
 import "../css/Slider.css";
 import Rocket from "./icons/Rocket.astro";
 import Star from "./icons/Star.astro";
-import { IconReact, IconExpo } from "./icons/technologies";
+import { IconReact } from "./icons/technologies";
 
 type ImagesReactNative = {
   uri: string;
