--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -65,9 +65,12 @@ import {
         I<span class="textBlue">'</span>m <span class="textBlue">Angel</span>.
       </h1>
       <p class="welcome-text-p">
-        <span class="animated-text"> Software Engineer</span> & frontend developer,
-        that loves to build gorgeous <span class="textBlue">software</span>
-        experiences<span class="textBlue">.</span>
+        <span class="animated-text"> Software Engineer</span>
+        <span class="font-mono text-base text-gray-400 mx-1.5">&&</span> Frontend
+        developer, that loves to build gorgeous <span class="textBlue"
+          >software</span
+        >
+        experiences<span class="textBlue">;</span>
       </p>
     </div>
   </article>
