--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 	--border: #D9D9D9;
 	--borderNavBar: #transparent;
-
+	--borderBottomNavBarDesktop: #ddd;
 	--btnExpand: #f0f0f0;
 
 	--z-index-navbar: 5;
@@ -29,7 +29,6 @@
 	--borderGradientConicWelcomeBubble: none;
 
 	--borderCardSkill: #ffffff4b;
-	--borderCardContact: #d9d9d9;
 	--borderPocketCard: #e7e7e7;
 
 	--frText: #181818;
@@ -76,6 +75,7 @@
 	--borderCardSkill: #45454553;
 	--borderCardContact: #4a4a4a;
 	--borderPocketCard: #212121;
+	--borderBottomNavBarDesktop: #212121;
 
 	--frCardSkill: #fff;
 	--frCardExperience: #6a6a6a;
