--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import "../css/Navbar.css";
+import { IconMoon } from "./generals";
 import FlagMX from "./icons/FlagMX.astro";
 import FlagUS from "./icons/FlagUS.astro";
 ---
@@ -29,16 +30,20 @@ import FlagUS from "./icons/FlagUS.astro";
         English version
       </a>
     </article>
-    <a class="topBar-anker" href="#sp">Projects</a>
+    <a class="inline-block no-underline hover:underline" href="#sp">
+      Projects
+    </a>
 
-    <a class="topBar-anker" href="#ss">Experience</a>
+    <a class="inline-block no-underline hover:underline" href="#ss">
+      Experience
+    </a>
 
     <button
       type="button"
       title="Button turn the dark mode"
       class="navBarBtnDark"
     >
-      <ion-icon class="navbar-desktop-ion" name="moon-outline"></ion-icon>
+      <IconMoon height={28} color="purple" />
     </button>
 
     <button
