--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Navbar from "../components/Navbar.astro";
 import Topbar from "../components/Topbar.astro";
 ---
 
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="google" content="notranslate" />
